# Soplon

./: .gitignore  CMakeLists.txt  DbClient.h  LICENSE  README.md  config.json  main.cc
controllers/: SoplonController.cc  SoplonController.h  SoplonWebSocket.cc  SoplonWebSocket.h  demo_v_User.cc  demo_v_User.cc.save  demo_v_User.h
filters/: TimeFilter.cc
models/: Author.cc  Author.h  Chunk.cc  Chunk.h  Denomination.cc  Denomination.h  Denominationlinkedauthor.cc  Denominationlinkedauthor.h  Denominationlinkedgroup.cc  Denominationlinkedgroup.h  File.cc  File.h  Groupcomposition.cc  Groupcomposition.h  Groupe.cc  Groupe.h  model.json
sources/: Auxilaire.h  ChallengeProfiles.cpp  ChallengeProfiles.h  Chunk.cpp  Chunk.h  Enum.cpp  Enum.h  File.cpp  File.h  Function.cpp  Function.h  Header.cpp  Header.h  Macro.cpp  Macro.h  Prototype.cpp  Prototype.h  SoplonDatabase.cpp  SoplonDatabase.h  Structure.cpp  Structure.h  Style.cpp  Style.h  ThreadPool.h  Variable.cpp  Variable.h  platform.h
test/: CMakeLists.txt
views/: ListParameters.cc  ListParameters.csp
